Ready for Azure deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/travel_auth
+MONGO_URI=mongodb+srv://admin:TravelBooking@travel-booking-cluster.cmhsbft.mongodb.net/travel_booking?retryWrites=true&w=majority&appName=travel-booking-cluster
+
 JWT_SECRET=devops_secret_key
 
 EMAIL_USER=arabazpinjar@gmail.com
