--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,8 @@ JWT_SECRET=devops_secret_key
 
 EMAIL_USER=arabazpinjar@gmail.com
 EMAIL_PASS=gdgxpiqwwydkuyos
+AWS_SES_SMTP_HOST=email-smtp.ap-south-1.amazonaws.com
+AWS_SES_SMTP_PORT=587
+AWS_SES_SMTP_USER=AKIA2RTINREWYMFTNDYK
+AWS_SES_SMTP_PASS=BPqWpTvzB/42tfNcvU1FyCa/tIvGjSdpmiyfY4hA+10V
+SES_SENDER_EMAIL=arabazpinjar@gmail.com
