--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,25 +14,25 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            echo "🚀 Connecting to EC2"
+  uses: appleboy/ssh-action@v1.0.3
+  with:
+    host: ${{ secrets.EC2_HOST }}
+    username: ${{ secrets.EC2_USER }}
+    key: ${{ secrets.EC2_SSH_KEY }}
+    port: 22
+    script: |
+      echo "🚀 Connecting to EC2"
+      cd ${{ secrets.APP_DIR }}
+      git pull origin main
 
-            cd ${{ secrets.APP_DIR }}
-            git pull origin main
+      echo "📦 Backend setup"
+      cd backend
+      npm install
+      pm2 restart travelly-backend || pm2 start server.js --name travelly-backend
 
-            echo "📦 Backend setup"
-            cd backend
-            npm install
-            pm2 restart travelly-backend || pm2 start server.js --name travelly-backend
+      echo "🎨 Frontend setup"
+      cd ../frontend
+      npm install
+      npm run build
 
-            echo "🎨 Frontend setup"
-            cd ../frontend
-            npm install
-            npm run build
-
-            echo "✅ Deployment finished"
+      echo "✅ Deployment finished"
